--- a/src/views/pages/form.handlebars
+++ b/src/views/pages/form.handlebars
@@ -1,7 +1,7 @@
 <h2>Agregar Producto</h2>
 <div class="row g-3">
 
-    <form class="row g-3" action="/productos" method="POST"> 
+    <form class="row g-3" action="../../products.json" method="POST"> 
     
         <div class="col-sm-3">
             <div class="input-group input-group-sm mb-3">
