--- a/src/views/layouts/index.handlebars
+++ b/src/views/layouts/index.handlebars
@@ -6,23 +6,20 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Shop Api</title>
-        <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./styles.css" rel="stylesheet" />
+        <link href="../../public/CSS/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="d-flex" id="wrapper">
-            <!-- Sidebar-->
+            
             <div class="border-end bg-white" id="sidebar-wrapper">
                 <div class="sidebar-heading border-bottom bg-light">API Productos</div>
                 <div class="list-group list-group-flush">
                     {{navlinks}}
                 </div>
             </div>
-            <!-- Page content wrapper-->
+            
             <div id="page-content-wrapper">
-                <!-- Top navigation-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                     <div class="container-fluid">
                         <button class="btn btn-primary btn-sm" id="sidebarToggle">Toggle Menu</button>
@@ -44,15 +41,12 @@
                         </div>
                     </div>
                 </nav>
-                <!-- Page content-->
                 <div class="container-fluid px-5 pt-3">
                     {{{body}}}
                 </div>
             </div>
         </div>
-        <!-- Bootstrap core JS-->
-        <script src="./js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="./js/scripts.js"></script>
+        <script src="../../public/js/bootstrap.bundle.min.js"></script>
+        <script src="../../public/js/script.js"></script>
     </body>
 </html>
